--- a/.github/workflows/generate-art.yml
+++ b/.github/workflows/generate-art.yml
@@ -3,7 +3,7 @@ on:
   push
 jobs:
   ascii_job:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout 
         uses: actions/checkout@v4
