--- a/.github/workflows/generate-art.yml
+++ b/.github/workflows/generate-art.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: checkout 
         uses: actions/checkout@v4
+      - name: list file
+        run: ls -ltar
       - name: running ascii.sh
         run: |
           sudo chmod +x ascii.sh
