--- a/.github/workflows/generate-art.yml
+++ b/.github/workflows/generate-art.yml
@@ -9,8 +9,8 @@ jobs:
         uses: actions/checkout@v4
       - name: list file
         run: ls -ltar
-      - name: running ascii.sh
-        run: |
-          chmod +x ascii.sh
-          ./ascii.sh
+      - name: changing permissions for ascii.sh
+        run: chmod +x ascii.sh
+      - name: executing the script
+        run: ./ascii.sh
           
