--- a/.github/workflows/generate-art.yml
+++ b/.github/workflows/generate-art.yml
@@ -22,5 +22,5 @@ jobs:
         run: |
           pwd
           ls -la
-          ./ascii.sh
+          bash /home/runner/work/action-test/action-test/ascii.sh
           
