--- a/.github/workflows/matrix_example.yml
+++ b/.github/workflows/matrix_example.yml
@@ -10,6 +10,9 @@ jobs:
       matrix:
         os: [ubuntu-latest,windows-latest]
         images: [hello-world, alpine]
+        exclude:  
+          -  image: alpine
+             os: windows
     runs-on: ${{ matrix.os }}
     steps:
       - name: echo docker details
