--- a/.github/workflows/matrix_example.yml
+++ b/.github/workflows/matrix_example.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest,windows-latest]
         images: [hello-world, alpine]
         exclude:  
-          -  image: alpine
+          -  images: alpine
              os: windows
     runs-on: ${{ matrix.os }}
     steps:
